--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "@mui/x-data-grid": "^7.5.0",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
