--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
+    "firebase": "^10.12.0",
+    "formik": "^2.4.6",
     "mdi-material-ui": "^7.1.0",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
@@ -60,8 +62,11 @@
     "react-apexcharts": "^1.3.9",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.1.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-popper": "^2.2.5"
+    "react-popper": "^2.2.5",
+    "react-toastify": "^10.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
